--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!-- Custom CSS Always has to be after BS due to cascading-->
   <link rel="stylesheet" href="style.css">
 
@@ -70,16 +69,10 @@
       <div class="row">
         <div class="col-sm">
           <h2>About me</h2>
-          <p>Callum Gill is an aspiring web developer and Computing graduate from the University of Greenwich in
-            London. Since University he further progressed his confidence and assertive communication
-            skills by interacting with a diverse range of people from multiple different walks of life. Since a young
-            age he has also shown a deep desire to achieve and self develop as can be seen from the qualifications he
-            has achieved during his time in education. These qualifications show continual growth in the candidate,
-            whilst also proving that he has a desire to stay dedicated to tasks and problem situations.
-
+          <p>Callum Gill is a web developer with over 6 years exprience delivering software for companies in the United Kingdom and Australia.
             Being an eager career driven young adult, Callum has worked in Software Testing since graduating in 2015.
-            The candidate has worked on multiple projects in a fast-paced environment and tested a variety of platforms
-            and technologies such as: Databases, Mobile applications, Desktop applications and APIs. Working with
+            The candidate has worked on multiple projects in a fast-paced environment and released a variety of platforms
+            and technologies to production websites such as: Databases, Mobile applications, Desktop applications and APIs. Working with
             different people and in problem situations whilst always maintaining punctuality. These skills are
             transferable in all different aspects of life and working environments, to make him a fully committed active
             member of any team.
@@ -120,8 +113,8 @@
         </div>
         <div class="col-sm">
           <ul class="list-unstyled">
-            <li><a href="https://github.com/Callum9362">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/callum-gill-9b753ba7/">Linkedin</a></li>
+            <li><i class="icon-github"></i><a href="https://github.com/Callum9362">Github</a></li>
+            <li><i class="fa-linkedin"></i><a href="https://www.linkedin.com/in/callum-gill-9b753ba7/">Linkedin</a></li>
           </ul>
         </div>
         <div class="col-sm">
