Added in the professional development section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-sm">
           <h2>About me</h2>
-          <p>Callum Gill is a web developer with over 6 years exprience delivering software for companies in the United Kingdom and Australia.
+          <p>Callum Gill is a web developer with over 6 years experience delivering software for companies in the United Kingdom and Australia.
             Being an eager career driven young adult, Callum has worked in Software Testing since graduating in 2015.
             The candidate has worked on multiple projects in a fast-paced environment and released a variety of platforms
             and technologies to production websites such as: Databases, Mobile applications, Desktop applications and APIs. Working with
@@ -97,7 +97,7 @@
             <li class="list-group-item"> - Design and creation of UI screens to support customer relationship and service management.</li>
             <li class="list-group-item"> - Creation of UX for current and prospective projects. </li>
             <li class="list-group-item"> - Front end functional testing (GUI, functionality, usability, bugs). </li>
-            <li class="list-group-item"> - Commerical experience and application of the Laravel framework. </li>
+            <li class="list-group-item"> - Commercial experience and application of the Laravel framework. </li>
           </ol>
         </div>
       </div>
@@ -112,7 +112,7 @@
           <ol class="list-group">
             <li class="list-group-item"> - Designed, developed and maintained test automation frameworks from the ground up. </li>
             <li class="list-group-item"> - Utilized open source automation tools in a .NET environment.</li>
-            <li class="list-group-item"> - Defined and governed the automation test strategywithin an agile squad </li>
+            <li class="list-group-item"> - Defined and governed the automation test strategy within an agile squad </li>
             <li class="list-group-item"> - Designed, implemented and maintained CI/CD pipelines within TeamCity and Azure DevOps </li>
             <li class="list-group-item"> - Collaborated with QA to implement testing tools and technologies </li>
           </ol>
@@ -135,6 +135,22 @@
             <li class="list-group-item"> Bachelor of Science in Computing BSc (Honours) 2:1 
           </ol>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="professional-dev">
+    <div class="container">
+      <h2>Professional Development</h2>
+      <div class="row">
+        <div id="workskills2" class="col-sm">
+          <ol class="list-group">
+            <li class="list-group-item"> - Completes daily programming exercises on platforms such as Edabit and CodeKata </li>
+            <li class="list-group-item"> - Utilises free education courses on Udemy and Laracasts to learn skills such as: PHP, Laravel, HTML, CSS, JavaScript, Bootstrap, React and Vue</li>
+            <li class="list-group-item"> - Follows social media accounts such as Traverse Media and LaravelBusiness to stay up to date with current industry trends. </li>
+            <li class="list-group-item"> - Reads documentation for particular libraries and frameworks to see latest changes and capabilities.</li>
+            <li class="list-group-item"> - Contributes to personal Github account to create projects and enhance current skillset through functional exercises.</li>
+          </ol>
       </div>
     </div>
   </section>
