--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Callum Gill CV</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -20,7 +21,7 @@
     <h1>Callum Gill</h1>
   </section>
   <section class="profile-pic">
-    <img class="rounded-circle z-depth-2" alt="100x100" src="./img/profile.jpg" data-holder-rendered="true">
+    <img class="rounded-circle z-depth-2" alt="Profile Pic" src="./img/profile.jpg" data-holder-rendered="true">
   </section>
   <section class="skills">
     <div class="container">
