Added in the tools to work experience as requested

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </div>
         <div id="workskills1" class="col-sm">
           <ol class="list-group">
-            <li class="list-group-item"> - Designed, developed code to support the web development team.</li>
-            <li class="list-group-item"> - Design and creation of UI screens to support customer relationship and service management.</li>
+            <li class="list-group-item"> - Designed, developed PHP code to support the web development team.</li>
+            <li class="list-group-item"> - Creation of UI screens with HTML, CSS, JavaScript and Bootstrap to support customer relationships and service management.</li>
             <li class="list-group-item"> - Creation of UX for current and prospective projects. </li>
             <li class="list-group-item"> - Front end functional testing (GUI, functionality, usability, bugs). </li>
             <li class="list-group-item"> - Commercial experience and application of the Laravel framework. </li>
